projects/elements/src/tag/tag.css
:host {
  --background: color-mix(in oklab, var(--color) var(--mlv-sys-contrast-mute-ratio), var(--mlv-sys-contrast-mute-color));
  --mlv-sys-interaction-state-base: var(--background);
  --color: var(--mlv-ref-color-blue-cobalt-1100);
  --gap: var(--mlv-ref-space-xs);
  --font-size: var(--mlv-ref-font-size-100);
  --padding: 0 var(--mlv-ref-size-200);
  --border-radius: var(--mlv-ref-border-radius-lg);
  --font-weight: var(--mlv-ref-font-weight-regular);
  --cursor: pointer;
  --height: var(--mlv-ref-size-600);
  display: inline-flex;
  user-select: none;
}

[internal-host] {
  font-weight: var(--font-weight);
  font-size: var(--font-size);
  gap: var(--gap);
  background: var(--background);
  color: color-mix(in oklab, var(--color), var(--mlv-sys-text-emphasis-color) 16%);
  padding: var(--padding);
  border-radius: var(--border-radius);
  cursor: var(--cursor);
  height: var(--height);
  display: inline-flex;
  align-items: center;
  line-height: 1em;
  place-items: center;
  place-content: center;
  white-space: nowrap;
}

::slotted([mlv-text]) {
  color: inherit !important;
}

mlv-icon {
  --color: inherit;
  cursor: var(--cursor);
}

:host([readonly]) {
  --text-decoration: none;
  --cursor: cursor;
}

